# orq-langgraph-demo

./: .env.example  .gitignore  ARCHITECTURE.md  COMPARING-APPROACHES.md  Dockerfile  Dockerfile.langsmith  EVALS.md  LANGGRAPH-INTEGRATION.md  LICENSE.md  Makefile  README.md  TROUBLESHOOTING.md  chainlit.md  docker-compose.yml  langgraph.json  pyproject.toml  pytest.ini  requirements.txt  test_agent.py
.chainlit/: config.toml
.github/workflows/: ci.yml  evals.yml  nightly.yml
data/: DIM_CITY.csv  DIM_DISH.csv  DIM_RESTAURANT.csv  FACT_ORDERS.csv
docs/: eval-dataset-growth.md
docs/sources/: allergen_labeling_policy.md  customer_service_playbook.md  delivery_operations_handbook.md  food_safety_and_hygiene_policy.md  menu_book.md  refund_and_sla_policy.md
evals/: _shared.py  create_eval_dataset.py  create_eval_dataset_on_langsmith.py  orq_scorers.py  run_evals.py  run_evaluation_pipeline.py  run_prompt_experiment.py
evals/datasets/: tool_calling_evals.jsonl  tool_selection_dataset_20250925_223038.csv  toyota_assistant_tool_calling_evals.jsonl
media/: tour.md
plans/: food-delivery-refactor.md  manage-prompts-on-orq.md  replace-chromadb-with-orq-knowledge-base.md  repo-improvements.md
public/: custom.css
resources/: conversation_starters.csv  converstation_starters.csv
scripts/: _term.py  doctor.py  generate_demo_orders.py  generate_demo_pdfs.py  grow_eval_dataset.py  init_database.py  setup_orq_workspace.py  structured_data_ingestion_pipeline.py  unstructured_data_ingestion_pipeline.py
src/: chainlit_app.py  chainlit_app_orq.py  orq_agent.py
src/assistant/: context.py  graph.py  guardrails.py  kb_tools.py  models.py  prompts.py  query_parser.py  secure_sql.py  simple_sql_executor.py  sql_schemas.py  sql_tools.py  sql_validator.py  state.py  tools.py  tracing.py  tracing_callback.py  tracing_otel.py  utils.py
src/core/: orq_client.py  settings.py
tests/: conftest.py  test_sql_security.py  test_sql_tools.py  test_strict_gate.py
